--- a/utils/main.ipynb
+++ b/utils/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -73,11 +73,11 @@
     "  document\n",
     "})\n",
     "\n",
-    "const encoder = new TextEncoder();\n",
-    "const data = encoder.encode(p.outerHTML);\n",
-    "await Deno.writeFile(\"ou.svg\", data);\n",
+    "/* const encoder = new TextEncoder()\n",
+    "const data = encoder.encode(p.outerHTML)\n",
+    "await Deno.writeFile(\"ou.svg\", data) */\n",
     "\n",
-    "Deno.jupyter.svg`${p.outerHTML}`;\n",
+    "Deno.jupyter.svg`${p.outerHTML}`\n",
     "\n",
     "\n"
    ]
