--- a/utils/main.ipynb
+++ b/utils/main.ipynb
@@ -16,7 +16,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9867\n",
+      "9935\n",
       "[\n",
       "  \"title\",      \"description\",\n",
       "  \"url\",        \"videoId\",\n",
@@ -29,19 +29,19 @@
       "[\n",
       "  [ \"https://youtube.com/channel/UCzsarHyI-5DttG5WHfuT8Mw\", 129 ],\n",
       "  [ \"https://youtube.com/@YTlanguages\", 111 ],\n",
-      "  [ \"https://youtube.com/@GermanPronunciation\", 81 ],\n",
+      "  [ \"https://youtube.com/@GermanPronunciation\", 99 ],\n",
       "  [ \"https://youtube.com/channel/UCHwBnqv2uBoouimH2wqL2sQ\", 71 ],\n",
       "  [ \"https://youtube.com/channel/UC2rbPw8Mt_lc4xjjghQbaQw\", 53 ],\n",
       "  [ \"https://youtube.com/@abramowiczschmuck\", 52 ],\n",
       "  [ \"https://youtube.com/@joluxom2144\", 45 ],\n",
       "  [ \"https://youtube.com/@julioutf2215\", 44 ],\n",
       "  [ \"https://youtube.com/channel/UCmGeN3-l_LU7bfB5BV-xzKg\", 44 ],\n",
+      "  [ \"https://youtube.com/channel/UCILEh4RNDNcZxEKzBXSqEDQ\", 42 ],\n",
       "  [ \"https://youtube.com/channel/UC0vd37jXEE-iAzGMdzqFGjg\", 41 ],\n",
       "  [ \"https://youtube.com/@glamourdynasty01\", 39 ],\n",
       "  [ \"https://youtube.com/@saved1698\", 38 ],\n",
       "  [ \"https://youtube.com/@language-lab\", 37 ],\n",
       "  [ \"https://youtube.com/@RefreshingRainSounds\", 36 ],\n",
-      "  [ \"https://youtube.com/channel/UCILEh4RNDNcZxEKzBXSqEDQ\", 36 ],\n",
       "  [ \"https://youtube.com/@ASLPropertiesDE\", 34 ],\n",
       "  [ \"https://youtube.com/@francescoantonio9706\", 34 ],\n",
       "  [ \"https://youtube.com/@dedahhidayati-u8d\", 33 ],\n",
@@ -93,6 +93,7 @@
       "  [ \"https://youtube.com/@occhineri7675\", 11 ],\n",
       "  [ \"https://youtube.com/@stringerdedhan\", 11 ],\n",
       "  [ \"https://youtube.com/@BrunoDelage-j4f\", 10 ],\n",
+      "  [ \"https://youtube.com/@PropertiesOnline\", 10 ],\n",
       "  [ \"https://youtube.com/@antiquesmc8069\", 10 ],\n",
       "  [ \"https://youtube.com/@MeganBleeks\", 10 ],\n",
       "  [ \"https://youtube.com/channel/UCuiUHm0lakCiCMNO4NyfxAQ\", 10 ],\n",
@@ -115,7 +116,6 @@
       "  [ \"https://youtube.com/@moniquelattimore8324\", 9 ],\n",
       "  [ \"https://youtube.com/@PrincessgicanAminecraft1567\", 9 ],\n",
       "  [ \"https://youtube.com/@opusopalindividuelleredels5343\", 9 ],\n",
-      "  [ \"https://youtube.com/@PropertiesOnline\", 9 ],\n",
       "  [ \"https://youtube.com/@dazhonbowie734\", 9 ],\n",
       "  [ \"https://youtube.com/@mariamargaretesantoslacerd2633\", 9 ],\n",
       "  [ \"https://youtube.com/@RolondaNocholson\", 9 ],\n",
@@ -127,7 +127,7 @@
       "  [ \"https://youtube.com/@cristinacammareri5144\", 9 ],\n",
       "  [ \"https://youtube.com/@DensaRitonga\", 8 ],\n",
       "  [ \"https://youtube.com/@PrincessPretty16\", 8 ],\n",
-      "  ... 6296 more items\n",
+      "  ... 6335 more items\n",
       "]\n"
      ]
     }
@@ -158,7 +158,7 @@
     "\n",
     "console.log(channels.map((c) => [c.channel, c.videos.length]))\n",
     "\n",
-    "/* const p = Plot.plot({\n",
+    "const p = Plot.plot({\n",
     "  width: 5000,\n",
     "  height: 5000,\n",
     "  grid: true,\n",
@@ -173,7 +173,7 @@
     "  document\n",
     "})\n",
     "\n",
-    "Deno.jupyter.svg`${p.outerHTML}` */"
+    "Deno.jupyter.svg`${p.outerHTML}`\n"
    ]
   },
   {
