--- a/utils/random-prefix.ipynb
+++ b/utils/random-prefix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "16720781",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "Promise { \u001b[36m<pending>\u001b[39m }"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -20,71 +20,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "O7Uus|6jUeQ|xsfXV [\n",
-      "  \"XsFXV-v7omY\", \"XsfXv-njssM\",\n",
-      "  \"PrCne-o7Uus\", \"o7UUs-YtBrQ\",\n",
-      "  \"8sQBt-o7uUs\", \"5TX8d59fnZE\",\n",
-      "  \"uFb6xANf8sM\", \"xAFok-O7uUs\",\n",
-      "  \"JesAr-o7UUs\", \"BTwoj-O7uUs\",\n",
-      "  \"x_VnX-6jUeQ\", \"FSCDj-o7Uus\",\n",
-      "  \"XsFXv--kg4Y\", \"xsFXV-6ANpc\",\n",
-      "  \"6JuEQ-cTVDw\", \"dMYCf-o7uUs\",\n",
-      "  \"XSFXv-wh2c0\"\n",
-      "] 17\n",
-      "BKPrV|ExK5u|Y1cot [\n",
-      "  \"1Uj-y1coT-A\",  \"ExK5u-l0auE\", \"vOpAqtwkLR4\",\n",
-      "  \"aqE56_Bab68\",  \"bKpRv-1HGOA\", \"LdS2dl2Z88s\",\n",
-      "  \"FpxRMRbgmzY\",  \"fm70Dzv5Bfo\", \"mSiO_yU83iE\",\n",
-      "  'mSiO_yU83iE\"', \"At_zw2U8BVQ\", \"GItggkzudWw\",\n",
-      "  \"L_b_e8xi02Y\",  \"QLEBjK6zz0E\", \"aq-it7PUG2A\",\n",
-      "  \"mXuWAIYf4Hg\",  \"E9M90m6WmKk\", \"TtG4q-EXK5U\",\n",
-      "  \"dlq01-eXK5U\",  \"DbGFj937Z4c\", \"bkprV-t9BFQ\",\n",
-      "  \"bKpRV-fvVhY\",  \"Y1COt-3He0A\", \"BkPrv-umrGM\",\n",
-      "  \"P6K6A-eXK5U\",  \"xErjYh-WRi4\", \"BkpRv-BqgQQ\",\n",
-      "  \"y1cOt-GEYYY\",  \"bKPrv-vYVJU\", \"VeJnw-exK5U\",\n",
-      "  \"BKpRv-1lKQo\",  \"9gzcS-ExK5U\"\n",
-      "] 32\n",
-      "fDFfA|bcqZH|bsC09 [\n",
-      "  \"h4war7sLnuQ\", \"HEYuU-oVKRY\", \"SHGUJaGa2to\",\n",
-      "  \"5QaC68sbHsE\", \"DtGlko5ZwaI\", \"Pik0YMM9kRQ\",\n",
-      "  \"Eq_COkl4KXY\", \"pi-ihbKmdIg\", \"4H2TBhW2m0I\",\n",
-      "  \"lW8j2DerxfU\", \"0-0it5kpJKg\", \"EIXOEYxfoJQ\",\n",
-      "  \"MBiGPpnszas\", \"gYYdUYVo-Ro\", \"MBwtoKeTfX0\",\n",
-      "  \"mWjERrrr29Y\", \"Av2DMKD5zLc\", \"BS5GZwfG09E\",\n",
-      "  \"Bl1Ykvt4VzY\", \"BnrjZQkUSZg\", \"amqiVjY130k\",\n",
-      "  \"BsaPjYP-W7Q\", \"IYRcslVdYQw\", \"pw6-0jSJd1I\",\n",
-      "  \"kX4GHmsT5oI\", \"68YqrCdZT3c\", \"d7Ync25nt58\",\n",
-      "  \"T4uhN3zdxYU\", \"QJE6As2KGL8\", \"6FHvB-Pgtmw\"\n",
-      "] 30\n",
-      "wgCsc|lq2za|h71v1 [\n",
-      "  \"l3kinDcy2d4\", \"nNFn_cKGzCQ\",\n",
-      "  \"4PKXWXGJsR4\", \"jcbl8YhruHU\",\n",
-      "  \"azYk_G4HHsQ\", \"MDnt--WGCSc\",\n",
-      "  \"Sb-a0rBpCFg\", \"FRxXYD-9DHM\",\n",
-      "  \"GLQ-dwCAs_A\", \"J_4GGTVqHIE\",\n",
-      "  \"LmnBCbGLQVs\", \"Mpw-bVkHtbs\",\n",
-      "  \"O0E6KDSaQU4\", \"P1LXxuaacpo\",\n",
-      "  \"SaN3Av5mFEs\", \"rztcP8uKvtg\",\n",
-      "  \"2eInj-WgcSc\", \"hRVeJCGaW1Y\",\n",
-      "  \"WgCSC-8SyYI\", \"JMbSbAOtI_Q\",\n",
-      "  \"Zb4z2-wGcsc\", \"1jeFT-wgcsc\",\n",
-      "  \"WGCSc-gdb5E\", \"exP9B-WGCSc\",\n",
-      "  \"-vjtv-WGcsc\", \"09KxE6Z_fWU\",\n",
-      "  \"OuzASgOiF2U\", \"h71v1-Ea0WA\"\n",
-      "] 28\n",
-      "GFwvF|xxz2k|nBX41 [\n",
-      "  \"gFWvf-pIt5I\", \"xXz2K-Jeujk\", \"SLEuS-xXz2k\",\n",
-      "  \"2VNd2-XXZ2k\", \"Avvm9-xxZ2k\", \"SCqdztiF1UY\",\n",
-      "  \"gFWvf-8qLxc\", \"GFwVF-8WE8c\", \"Fm9tY2_jyHM\",\n",
-      "  \"MLpkSAAKlrA\", \"RO865yTTN5Q\", \"a9zsWewlw3o\",\n",
-      "  \"nIlK3swImO0\", \"gfwVf-4XNC4\", \"PoZYREbq2GE\",\n",
-      "  \"VJtfMQ9V8m4\", \"XHi3CI1B4lc\", \"YWWcLexkoQ4\",\n",
-      "  \"gFwVf-uZYy0\", \"xxz2K-Y4piY\", \"GFWVf-GtxgA\",\n",
-      "  \"gfWVF-M6Yv4\", \"r-xzH-XXz2k\", 'r-xzH-XXz2k\"',\n",
-      "  \"GFWVF-QhDwI\", \"ddDth-XXZ2k\", \"xxZ2k-_Lxxc\",\n",
-      "  \"WuGwbgG2EIw\", \"GFwvF-FK2x0\", \"gFwvf-yOEcI\",\n",
-      "  \"kKPHk-xxz2k\"\n",
-      "] 31\n"
+      "rSEur|LyGyD|b1Di6 [\n",
+      "  \"uOHNalzkdcU\", \"nmbFDGPW9Ms\",\n",
+      "  \"oWnoStrgM_8\", \"rseuR-0bg8w\",\n",
+      "  \"lp9QaNifFqw\", \"LyGyD-HfWs8\",\n",
+      "  \"-rsEur-GlPo\", \"Eq79H3hB8V0\",\n",
+      "  \"U6C9hEnGuhA\", \"9DoPVnwoV5U\",\n",
+      "  \"JEDZQBffKLI\", \"rSeUr-26rDw\",\n",
+      "  \"rSeUr-q-Rqg\", \"LygyD-RVk3A\",\n",
+      "  \"lMmalxc3qrU\", \"FdjeWpDRO8U\",\n",
+      "  \"rseur-WSPKs\", \"RSEuR-Lj2eA\",\n",
+      "  \"GAwb0msnKNw\", \"U_RepjKqVN4\",\n",
+      "  \"lyGYd-lrEw4\", \"b1Di6-akUPw\",\n",
+      "  \"lYgYd-5Vj3Y\", \"lYgYD-ejUOY\",\n",
+      "  \"LYgYD-JTd_8\", \"_qa8Qd9QTyY\"\n",
+      "] 26\n",
+      "jOST5|wBgAb|I7wq2 [\n",
+      "  \"AOlixi3hwco\",  \"XT7miJ00Qy4\",\n",
+      "  \"yscqtu9641E\",  \"pMpbcKam7XI\",\n",
+      "  \"QIwGcpkDo_o\",  \"Yp81l2aVap4\",\n",
+      "  \"HPH0HgotIE4\",  \"YRfN-UGoKJY\",\n",
+      "  \"FivN1PZxWeA\",  \"TGmuMMTP5IM\",\n",
+      "  \"uvjTXcFDmRc\",  \"3h_4jOEdPVQ\",\n",
+      "  '3h_4jOEdPVQ\"', \"l9Tw744Yt9w\",\n",
+      "  \"6NE_kbJQ8r8\",  \"rqFmCWXR4a0\",\n",
+      "  'rqFmCWXR4a0\"', \"FcTmNfoF4Gw\",\n",
+      "  \"HcVm1iRYxAc\",  \"PtNzrCMGYTo\",\n",
+      "  \"tBCYEYmqt7E\",  \"yPSFJwORLH0\",\n",
+      "  \"Qy7h-cs_GEM\",  \"rni2Y4Jo6gc\",\n",
+      "  \"iPHgG08whus\",  \"atKelxzvoHA\",\n",
+      "  \"Un1pOAdzbeQ\",  \"HFEQGdbKuIk\",\n",
+      "  \"i-FWz7luu9w\"\n",
+      "] 29\n",
+      "6YMVB|GFIgv|1RyCR [\n",
+      "  \"X64Fe5xhYFs\", \"GFigV-PjZDs\",\n",
+      "  \"1RycR-ERt5Y\", \"6Ymvb-ud62w\",\n",
+      "  \"6YmVB-D4-3k\", \"1RyCr-GEmqk\",\n",
+      "  \"BaTQi-_GRZE\", \"KPsYG24mW4k\",\n",
+      "  \"NOQOzUxsVCs\", \"PKaeEneFrKQ\",\n",
+      "  \"PX-8VvzHoPE\", \"QXKV5YE1qUU\",\n",
+      "  \"SC8Kccn7oHY\", \"S8gNjaD-SQI\",\n",
+      "  \"XMW0C-WM3zQ\", \"ibiVU0OLFjc\",\n",
+      "  \"rJfxQPYl6fg\", \"6YMvb-Fhvqs\",\n",
+      "  \"gfIgv-zaVgY\", \"rTOXhnggmB4\",\n",
+      "  \"hefPhCU3Bhs\", \"6ymvb-zg5fM\",\n",
+      "  \"gFIgV-y3Vno\", \"GFIgv-bCTLQ\",\n",
+      "  \"gFIgV-gGRSg\", \"gFIGV-8qFl8\",\n",
+      "  \"GFiGV-uMEXc\"\n",
+      "] 27\n",
+      "M4Fe2|Wiw5d|C4KKA [\n",
+      "  \"C4Kka-wg_qo\", \"M4FE2-n22iA\",\n",
+      "  \"WIw5D-YrKDY\", \"8ll7wAMaoTM\",\n",
+      "  \"exy6x-C4kkA\", \"C4kkA-3pgEg\",\n",
+      "  \"LjPT4-c4kKA\", \"BwR5X-C4kKA\",\n",
+      "  \"ssXkj-C4KkA\", \"c4KKa-7wl3g\",\n",
+      "  \"M4FE2-BT6DA\", \"c4kkA-1wQ4g\",\n",
+      "  \"C4kka-w8s14\", \"alae8-C4KkA\",\n",
+      "  \"C4kka-Fu22o\", \"c4KKa-cKYME\",\n",
+      "  \"ajD35-C4kkA\", \"C4kka-AGvTM\"\n",
+      "] 18\n"
      ]
     }
    ],
@@ -125,7 +119,9 @@
     "  }\n",
     "}\n",
     "\n",
-    "init()\n"
+    "init()\n",
+    "\n",
+    "\n"
    ]
   }
  ],
